# ChangeLog for net-mail/evolution
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/evolution/Attic/ChangeLog,v 1.45 2003/03/14 02:01:20 liquidx Exp $

*evolution-1.3.1 (14 Mar 2003)

  14 Mar 2003; Alastair Tse <liquidx@gentoo.org> evolution-1.3.1.ebuild:
  version bump to gtk2 _beta_ evolution. this version can co-exist with
  evolution 1.2.x, but you must NOT run them at the same time. currently masked
  because not everyone wants to break their mail clients ;)
  Remember, this is an unstable release!

  17 Feb 2003; foser <foser@gentoo.org> evolution-1.[2.0-r1,0.8,2.1,2.2].ebuild :
  Fixed db source uri (#15839)

*evolution-1.2.2 (16 Feb 2003)

  09 Mar 2003; foser <foser@gentoo.org> evolution-1.2.2.ebuild :
  Fixed glade dep

  03 Mar 2003; Alastair Tse <liquidx@gentoo.org> evolution-1.2.2.ebuild :
  marking as stable.

  02 Mar 2003; Alastair Tse <liquidx@gentoo.org> evolution-1.2.2.ebuild :
  USE="-mozilla" will actually remove mozilla from dependencies (#12821)

  16 Feb 2003; Daniel Robbins <drobbins@gentoo.org> evolution-1.2.2.ebuild:
  added latest version ~masked for all arches previously in KEYWORDS. "It works
  for me..." and your mileage may vary. Needs testing.

  08 Jan 2003; Martin Schlemmer <azarah@gentoo.org> evolution-1.0.8-r2.ebuild, evolution-1.2.1.ebuild :
  Mark 1.2.1 stable for x86.  Do not install 1.0.8 if gnome-spell-0.5 or
  gtkhtml-1.1 installed.

  10 Dec 2002; foser <foser@gentoo.org> evolution-1.0.7.ebuild evolution-1.0.8-r2.ebuild evolution-1.2.0.ebuild evolution-1.2.0-r1.ebuild :
  Fixed gob deps (bug #11633)

*evolution-1.2.1 (17 Dec 2002) 

  17 Dec 2002; Stefan Jones <cretin@gentoo.org> :
  New version, removed old patches and updated deps.
  
*evolution-1.2.0-r1 (09 Dec 2002)

  09 Dec 2002; Martin Schlemmer <azarah@gentoo.org> evolution-1.2.0-r1.ebuild :